--- a/.gitbook.yaml
+++ b/.gitbook.yaml
@@ -4,4 +4,4 @@ structure:
     summary: summary.md
 
 redirect:
-    redirect-test-1: ./docs/redirect-test-2
+    docs/page-2.md: ./docs/redirect-test-2
