--- a/.gitbook.yaml
+++ b/.gitbook.yaml
@@ -3,5 +3,6 @@ root: ./docs/
 structure:
     summary: summary.md
 
-redirect:
-    redirect-test-1: ./docs/redirect-test-2
+rewrites:
+  - from: /redirect-test-1
+    to: /redirect-test-2
