--- a/.gitbook.yaml
+++ b/.gitbook.yaml
@@ -4,5 +4,5 @@ structure:
     summary: summary.md
 
 rewrites:
-  - from: /redirect-test-1
-    to: /redirect-test-2
+  - from: "/redirect-test-1"
+    to: "/redirect-test-2"
