--- a/.gitbook.yaml
+++ b/.gitbook.yaml
@@ -3,6 +3,5 @@ root: ./docs/
 structure:
     summary: summary.md
 
-rewrites:
-  - from: "/redirect-test-1"
-    to: "/redirect-test-2"
+redirects:
+    redirect-test-1: /docs/redirect-test-2
